feat(nx): created custom workspaceLayout to automatically create libraries in feature dir

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@selise-start/test": ["libs/feature/test/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
