--- a/nx.json
+++ b/nx.json
@@ -30,5 +30,8 @@
       "tags": [],
       "implicitDependencies": ["code-auditor"]
     }
+  },
+  "workspaceLayout": {
+    "libsDir": "libs/feature"
   }
 }
