--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@selise-start/test": ["libs/feature/test/src/index.ts"]
+      "@selise-start/test": ["libs/feature/test/src/index.ts"],
+      "@selise-start/user": ["libs/feature/user/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
