--- a/nx.json
+++ b/nx.json
@@ -29,6 +29,9 @@
     "code-auditor-e2e": {
       "tags": [],
       "implicitDependencies": ["code-auditor"]
+    },
+    "user": {
+      "tags": []
     }
   },
   "workspaceLayout": {
