feat(team-detail & add-team.ts): user Facade Service route path. Team-detail view
User-Facade.service now has a route with selise-start as root.team details can now be viewed

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,6 +30,9 @@
       "@selise-start/user/model": [
         "libs/feature/user/src/lib/models"
       ],
+      "@selise-start/user/service": [
+        "libs/feature/user/src/lib/services/user-facade.service.ts"
+      ],
       "@selise-start/audit": [
         "libs/feature/audit/src/index.ts"
       ],
