feat(add-audit): able to create audits. Validation has been set as well. Code is Really DIRTY THO!

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,6 +39,9 @@
       "@selise-start/team": [
         "libs/feature/team/src/index.ts"
       ]
+//      "@selise-start/team/model": [
+//        "libs/feature/team/src/"
+//      ]
     }
   },
   "exclude": [
