--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "json-server": "^0.16.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
