--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,42 +10,22 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@selise-start/test": [
-        "libs/feature/test/src/index.ts"
-      ],
-      "@selise-start/user": [
-        "libs/feature/user/src/index.ts"
-      ],
-      "@selise-start/user/model": [
-        "libs/feature/user/src/lib/models"
-      ],
+      "@selise-start/test": ["libs/feature/test/src/index.ts"],
+      "@selise-start/user": ["libs/feature/user/src/index.ts"],
+      "@selise-start/user/model": ["libs/feature/user/src/lib/models"],
       "@selise-start/user/service": [
         "libs/feature/user/src/lib/services/user-facade.service.ts"
       ],
-      "@selise-start/audit": [
-        "libs/feature/audit/src/index.ts"
-      ],
-      "@selise-start/team": [
-        "libs/feature/team/src/index.ts"
-      ]
-//      "@selise-start/team/model": [
-//        "libs/feature/team/src/"
-//      ]
+      "@selise-start/audit": ["libs/feature/audit/src/index.ts"],
+      "@selise-start/team": ["libs/feature/team/src/index.ts"],
+      "@selise-start/auth": ["libs/feature/auth/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
