--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser": "^10.1.0",
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@codewithdan/observable-store": "^2.2.11",
     "@ngneat/until-destroy": "^8.0.3",
     "@nrwl/angular": "10.4.4",
