--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,13 +19,12 @@
       "@selise-start/test": ["libs/feature/test/src/index.ts"],
       "@selise-start/user": ["libs/feature/user/src/index.ts"],
       "@selise-start/user/model": ["libs/feature/user/src/lib/models"],
-      "@selise-start/user/service": [
-        "libs/feature/user/src/lib/services/user-facade.service.ts"
-      ],
+      "@selise-start/user/service": ["libs/feature/user/src/lib/services/user-facade.service.ts"],
       "@selise-start/audit": ["libs/feature/audit/src/index.ts"],
       "@selise-start/team": ["libs/feature/team/src/index.ts"],
       "@selise-start/auth": ["libs/feature/auth/src/index.ts"],
-      "@selise-start/shared": ["libs/feature/shared/src/index.ts"]
+      "@selise-start/shared": ["libs/feature/shared/src/index.ts"],
+      "@selise-start/app-config": ["libs/app-config/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
